# my_first_cmake

step1/: CMakeCache.txt  CMakeLists.txt  Makefile  Tutorial  cmake_install.cmake  main.cpp
step2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  foo.cpp  main  main.cpp
step2_alt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
step2_alt/MathFunctions/: Makefile  MathFunctions.h  cmake_install.cmake  mysqrt.cpp
step2_alt/sources/: CMakeLists.txt  main.cpp
step2_alt/sources/my_math/: CMakeLists.txt  main.cpp  my_math.h
